# fusion

./: .gitignore  README.md  pyproject.toml
config/: config.yaml
configs/: nuscenes_centerfusion.yaml
scripts/: visualize_bev.py  visualize_overlay.py  visualize_radar_data.py
src/: main.py  train.py
src/data/: nuscenes_dataset.py
src/fusion/: __init__.py  cli.py  config.py  constants.py
src/fusion/data/: __init__.py  dataset.py  radar.py  targets.py
src/fusion/engine/: __init__.py  evaluator.py  trainer.py  visualizer.py
src/fusion/model/: __init__.py  backbone.py  decode.py  detector.py  heads.py  losses.py
src/fusion/utils/: geometry.py  io.py
src/loss/: losses.py
src/models/: centernet3d.py
src/utils/: geometry.py  image.py
