[project]
name = "fusion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.2",
    "nuscenes-devkit>=1.1.11",
    "opencv-python>=4.13.0.92",
    "pyquaternion>=0.9.9",
    "pyyaml>=6.0.3",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
]
